--- a/bild2.html
+++ b/bild2.html
@@ -311,8 +311,7 @@ var utag_data = {
 "page_channel3" : "2021",
 "page_channel4" : "Heftige Baerbock-Attacke gegen Merkel und Scholz - Wahlkampf wichtiger als Menschenleben /pol/a",
 "page_document_type" : "BTOArtikel",
-"page_cms_path" : "/politik/talk-kritik/2021/08/20/heftige-baerbock-attacke-gegen-611ef59481b0604d119b3b60/baerbock-attacke-bei-illner-wahlkampf-einigen-wichtiger-als-menschenleben",
-"page_headline" : "Wahlkampf wichtiger als Menschenleben",
+"page_cms_path" : "/politik/talk-kritik/2021/08/20/ berateraffäre" : "baerbock neuer skandal",
 "page_id" : "77436934",
 "page_ivw_code" : "politik_talk-kritik/article",
 "page_kicker" : "Heftige Baerbock-Attacke gegen Merkel und Scholz",
@@ -755,19 +754,7 @@ de.bild.events.publish('dataLayer/webtrekk/ready');
     20.08.2021 - 17:49 Uhr
         </time>
 
-<ol>
-            <li>
-                    <a href="//www.bild.de/" class="external-link" rel="home" ><span>Home</span>
-                    </a>
-                    &rsaquo;
-                </li>
-                <li>
-                            <a href="/politik/startseite/politik/politik-16804552.bild.html" ><span>Politik</span>
-                            </a>&rsaquo;</li>
-                    <li>
-                        <h1>neuer Skandal um Baerbock</h1>
-                    </li>
-                </ol>
+
     </div>
 <!-- Breaking News -->
     <script>
